Masonry layout implemented and overlapping problem solved

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -101,3 +101,7 @@ p strong {
 }
 
 
+.grid-item {
+  width: calc(33% - 10px);
+}
+
